--- a/src/dnx/dnx.vcxproj
+++ b/src/dnx/dnx.vcxproj
@@ -47,6 +47,7 @@
     <ClInclude Include="dnx.h" />
     <ClInclude Include="pal.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="servicing.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TraceWriter.h" />
@@ -58,6 +59,7 @@
     <ClCompile Condition="'$(Platform)' != 'ARM'" Include="dllmain.cpp" />
     <ClCompile Include="dnx.cpp" />
     <ClCompile Include="pal.win32.cpp" />
+    <ClCompile Include="servicing.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
